--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,33 +1,48 @@
-name: base
+name: KERAS
 channels:
+  - plotly
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _tflow_select=2.3.0=mkl
+  - absl-py=0.10.0=py38_0
   - argon2-cffi=20.1.0=py38h1e0a361_1
+  - astunparse=1.6.3=py_0
   - async_generator=1.10=py_0
   - attrs=20.2.0=pyh9f0ad1d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
+  - blas=1.0=mkl
   - bleach=3.2.1=pyh9f0ad1d_0
-  - ca-certificates=2020.6.20=hecda079_0
-  - certifi=2020.6.20=py38h32f6830_0
-  - cffi=1.14.0=py38he30daa8_1
+  - blinker=1.4=py38_0
+  - brotlipy=0.7.0=py38h7b6447c_1000
+  - c-ares=1.16.1=h7b6447c_0
+  - ca-certificates=2020.10.14=0
+  - cachetools=4.1.1=py_0
+  - certifi=2020.6.20=py38_0
+  - cffi=1.14.3=py38he30daa8_0
   - chardet=3.0.4=py38_1003
-  - conda=4.8.5=py38h32f6830_1
-  - conda-package-handling=1.6.1=py38h7b6447c_0
-  - cryptography=2.9.2=py38h1ba5d50_0
+  - click=7.1.2=py_0
+  - cryptography=3.1=py38h1ba5d50_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py38h32f6830_1001
-  - idna=2.9=py_1
-  - importlib-metadata=2.0.0=py38h32f6830_0
-  - importlib_metadata=2.0.0=0
+  - gast=0.3.3=py_0
+  - google-auth=1.21.2=py_0
+  - google-auth-oauthlib=0.4.1=py_2
+  - google-pasta=0.2.0=py_0
+  - grpcio=1.31.0=py38hf8bcb03_0
+  - h5py=2.10.0=py38hd6299e0_1
+  - hdf5=1.10.6=hb1b8bf9_0
+  - idna=2.10=py_0
+  - importlib-metadata=1.7.0=py38_0
+  - importlib_metadata=1.7.0=0
+  - intel-openmp=2020.2=254
   - ipykernel=5.3.4=py38h23f93f0_0
   - ipython=7.18.1=py38h1cdfbd6_0
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=pyh9f0ad1d_1
   - jedi=0.15.2=py38_0
   - jinja2=2.11.2=pyh9f0ad1d_0
   - json5=0.9.5=pyh9f0ad1d_0
@@ -37,110 +52,106 @@ dependencies:
   - jupyterlab=2.2.8=py_0
   - jupyterlab_pygments=0.1.1=pyh9f0ad1d_0
   - jupyterlab_server=1.2.0=py_0
+  - keras=2.4.3=0
+  - keras-base=2.4.3=py_0
+  - keras-preprocessing=1.1.0=py_1
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.3=he6710b0_1
+  - libedit=3.1.20191231=h14c3975_1
+  - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libprotobuf=3.12.4=hd408876_0
   - libsodium=1.0.18=h516909a_1
   - libstdcxx-ng=9.1.0=hdf63c60_0
+  - markdown=3.2.2=py38_0
   - markupsafe=1.1.1=py38h1e0a361_1
   - mistune=0.8.4=py38h1e0a361_1001
+  - mkl=2020.2=256
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.2.0=py38h23d657b_0
+  - mkl_random=1.1.1=py38h0573a6f_0
   - nbclient=0.5.0=py_0
   - nbconvert=6.0.6=py38h32f6830_0
   - nbformat=5.0.7=py_0
   - ncurses=6.2=he6710b0_1
   - nest-asyncio=1.4.0=py_1
   - notebook=6.1.4=py38h32f6830_0
-  - openssl=1.1.1h=h516909a_0
+  - numpy=1.19.1=py38hbc911f0_0
+  - numpy-base=1.19.1=py38hfa32c7d_0
+  - oauthlib=3.1.0=py_0
+  - openssl=1.1.1h=h7b6447c_0
+  - opt_einsum=3.1.0=py_0
   - packaging=20.4=pyh9f0ad1d_0
+  - pandas=1.1.1=py38he6710b0_0
   - pandoc=2.10.1=h516909a_0
   - pandocfilters=1.4.2=py_1
   - parso=0.5.2=py_0
+  - patsy=0.5.1=py38_0
   - pexpect=4.8.0=py38h32f6830_1
   - pickleshare=0.7.5=py38h32f6830_1001
-  - pip=20.0.2=py38_3
+  - pip=20.2.2=py38_0
+  - plotly=4.12.0=py_0
+  - plotly_express=0.4.1=py_0
   - prometheus_client=0.8.0=pyh9f0ad1d_0
   - prompt-toolkit=3.0.7=py_0
+  - protobuf=3.12.4=py38he6710b0_0
   - ptyprocess=0.6.0=py_1001
-  - pycosat=0.6.3=py38h7b6447c_1
-  - pycparser=2.20=py_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycparser=2.20=py_2
   - pygments=2.7.1=py_0
-  - pyopenssl=19.1.0=py38_0
+  - pyjwt=1.7.1=py38_0
+  - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
   - pyrsistent=0.17.3=py38h1e0a361_0
   - pysocks=1.7.1=py38_0
-  - python=3.8.3=hcff3b4d_0
+  - python=3.8.5=h7579374_1
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
+  - pytz=2020.1=py_0
+  - pyyaml=5.3.1=py38h7b6447c_1
   - pyzmq=19.0.2=py38ha71036d_0
   - readline=8.0=h7b6447c_0
-  - requests=2.23.0=py38_0
-  - ruamel_yaml=0.15.87=py38h7b6447c_0
+  - requests=2.24.0=py_0
+  - requests-oauthlib=1.3.0=py_0
+  - retrying=1.3.3=py_2
+  - rsa=4.6=py_0
+  - scipy=1.5.2=py38h0b6359f_0
   - send2trash=1.5.0=py_0
-  - setuptools=46.4.0=py38_0
-  - six=1.14.0=py38_0
-  - sqlite=3.31.1=h62c20be_1
+  - setuptools=49.6.0=py38_0
+  - six=1.15.0=py_0
+  - sqlite=3.33.0=h62c20be_0
+  - statsmodels=0.12.0=py38h7b6447c_0
+  - tensorboard=2.2.1=pyh532a8cf_0
+  - tensorboard-plugin-wit=1.6.0=py_0
+  - tensorflow=2.2.0=mkl_py38h6d3daf0_0
+  - tensorflow-base=2.2.0=mkl_py38h5059a2d_0
+  - tensorflow-estimator=2.2.0=pyh208ff02_0
+  - termcolor=1.1.0=py38_1
   - terminado=0.9.1=py38h32f6830_0
   - testpath=0.4.4=py_0
-  - tk=8.6.8=hbc83047_0
+  - tk=8.6.10=hbc83047_0
   - tornado=6.0.4=py38h1e0a361_1
-  - tqdm=4.46.0=py_0
   - traitlets=5.0.4=py_1
+  - urllib3=1.25.10=py_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
-  - wheel=0.34.2=py38_0
-  - widgetsnbextension=3.5.1=py38h32f6830_1
+  - werkzeug=1.0.1=py_0
+  - wheel=0.35.1=py_0
+  - wrapt=1.12.1=py38h7b6447c_1
   - xz=5.2.5=h7b6447c_0
-  - yaml=0.1.7=had09818_2
+  - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.2=he1b5a44_3
-  - zipp=3.2.0=py_0
+  - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
-    - absl-py==0.10.0
-    - aiohttp==3.6.2
-    - arnold==0.4.1
-    - astunparse==1.6.3
-    - async-timeout==3.0.1
-    - cachetools==4.1.1
     - cycler==0.10.0
-    - gast==0.3.3
-    - google-auth==1.22.0
-    - google-auth-oauthlib==0.4.1
-    - google-pasta==0.2.0
-    - grpcio==1.32.0
-    - h5py==2.10.0
-    - keras==2.4.3
-    - keras-preprocessing==1.1.2
+    - joblib==0.16.0
     - kiwisolver==1.2.0
-    - markdown==3.2.2
     - matplotlib==3.3.2
-    - multidict==4.7.6
-    - numpy==1.18.5
-    - oauthlib==3.1.0
-    - opt-einsum==3.3.0
-    - pandas==1.1.2
-    - pathlib2==2.3.5
-    - peewee==3.13.3
     - pillow==7.2.0
-    - protobuf==3.13.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - python-slugify==4.0.1
-    - pytz==2020.1
-    - pyyaml==5.3.1
-    - requests-oauthlib==1.3.0
-    - rsa==4.6
-    - scipy==1.5.2
+    - scikit-learn==0.23.2
     - seaborn==0.11.0
-    - slugify==0.0.1
-    - tensorboard==2.3.0
-    - tensorboard-plugin-wit==1.7.0
-    - tensorflow==2.3.1
-    - tensorflow-estimator==2.3.0
-    - termcolor==1.1.0
-    - text-unidecode==1.3
-    - urllib3==1.24.3
-    - werkzeug==1.0.1
-    - wrapt==1.12.1
-    - yarl==1.6.0
-prefix: /home/lynda/miniconda3
+    - sklearn==0.0
+    - threadpoolctl==2.1.0
+prefix: /home/lynda/miniconda3/envs/KERAS
